Closed Bug 344143 Opened 19 years ago Closed 18 years ago

No Error messages displayed for LDAP Autocomplete (Couldn't convert chrome URL ... ldapAutoCompErrs.properties)

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

References

Details

(Keywords: regression)

Attachments

(1 file)

This is a regression from bug 263042, when an error occurs during autocomplete when using the compose window, I get: Couldn't convert chrome URL: chrome://mailnews/locale/addressbook/ldapAutoCompErrs.properties ###!!! ASSERTION: nsAbLDAPAutoCompleteFormatter::FormatException(): error getting general error from bundle chrome://mailnews/locale/addressbook/ldapAutoCompErrs.properties: 'Error', file /mozilla/master/mozilla/mailnews/addrbook/src/nsAbLDAPAutoCompFormatter.cpp, line 222 ###!!! ASSERTION: nsLDAPAutoCompleteSession::FinishAutoCompleteLookup(): error calling FormatException(): 'Error', file /mozilla/master/mozilla/mailnews/addrbook/src/nsLDAPAutoCompleteSession.cpp, line 1327 The problem is the chrome URL should be chrome://messenger/locale/addressbook/ldapAutoCompErrs.properties not chrome://mailnews/locale/addressbook/ldapAutoCompErrs.properties As the attachment 201545 [details] [diff] [review] didn't go into branch, then this won't need to go into branch. I also noticed a couple of the errors have the wrong url displayed so I'll fix that at the same time.
Attached patch The fixSplinter Review
This patch fixes the chrome url and corrects and simplifies some of the debug output.
Attachment #228704 - Flags: superreview?(bienvenu)
Attachment #228704 - Flags: review?(bienvenu)
Comment on attachment 228704 [details] [diff] [review] The fix cool, thx!
Attachment #228704 - Flags: superreview?(bienvenu)
Attachment #228704 - Flags: superreview+
Attachment #228704 - Flags: review?(bienvenu)
Attachment #228704 - Flags: review+
Patch checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: