Bug 344143 No Error messages displayed for LDAP Autocomplete (Couldn't convert chrome URL ... ldapAutoCompErrs.properties). r/sr=bienvenu